enter new lines

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Push now</title>
 </head>
 <body>
+    <h1>all is well</h1>
+    <h2>nowhere</h2>
+    <h3>nothing matters</h3>
     
 </body>
 </html>
