--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Push now</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>all is well</h1>
     <h2>nowhere</h2>
     <h3>nothing matters</h3>
-    
+    <p>ghum ashe</p>
+    <p>ghumbo</p>
 </body>
 </html>
