--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>all is well</h1>
     <h2>nowhere</h2>
     <h3>nothing matters</h3>
+    <img src="depositphotos_54081723-stock-photo-beautiful-nature-landscape.jpg" alt="nature">
+    <img src="tree-276014__340.jpg" alt="">
     <p>ghum ashe</p>
     <p>ghumbo</p>
 </body>
