--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
     <img src="f341e94851147b91d314bcfc4765c72e.jpg" alt="">
     <p>ghum ashe</p>
     <p>ghumbo</p>
+    <p>mon khrp na</p>
+    <h3>new lines</h3>
+    <p>tum na jano hum na janu tum na kaho hum na kaho <br> najar na pekiye,gossa na kijiye</p>
 </body>
 </html>
